[package]
name = "cryptopals"
version = "0.1.0"
authors = ["lejliu <14846866+lejliu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
openssl = "0.10.36"
itertools = "0.10.1"
rand = "0.8.4"
